# bookmanagmentsystem

BOOK_MANAGEMENT(1) (1)/BOOK_MANAGEMENT/: CMakeLists.txt  CMakeLists.txt.user.85f6f50  addbook.cpp  addbook.h  addbook.ui  adduser.cpp  adduser.h  adduser.ui  issuebook.cpp  issuebook.h  issuebook.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  returnbook.cpp  returnbook.h  returnbook.ui  viewbook.cpp  viewbook.h  viewbook.ui  viewuser.cpp  viewuser.h  viewuser.ui
BOOK_MANAGEMENT(1) (1)/BOOK_MANAGEMENT/database/: CMakeLists.txt  db.cpp  db.h
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  libInfo.db  qtcsettings.cmake
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/.cmake/api/v1/reply/: cache-v2-cd22f57e4ff778438299.json  cmakeFiles-v1-51cebf8af00996361f53.json  codemodel-v2-62e278f7d319f60496b6.json  index-2023-04-06T05-28-28-0752.json  target-BOOK_MANAGEMENT-Debug-e9c171b68bacfcc51b6a.json  target-BOOK_MANAGEMENT_autogen-Debug-910cb378d52f98fbfc1c.json  (+2 more)
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/BOOK_MANAGEMENT_autogen/: moc_predefs.h  mocs_compilation.cpp
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/BOOK_MANAGEMENT_autogen/EWIEGA46WW/: moc_addbook.cpp  moc_adduser.cpp  moc_issuebook.cpp  moc_mainwindow.cpp  moc_returnbook.cpp  moc_viewbook.cpp  moc_viewuser.cpp
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/BOOK_MANAGEMENT_autogen/include/: ui_addbook.h  ui_adduser.h  ui_issuebook.h  ui_mainwindow.h  ui_returnbook.h  ui_viewbook.h  ui_viewuser.h
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/database/: Makefile  cmake_install.cmake
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/database/database_autogen/: moc_predefs.h  mocs_compilation.cpp
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/database/database_autogen/EWIEGA46WW/: moc_db.cpp
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
BOOK_MANAGEMENT(1) (1)/build-BOOK_MANAGEMENT-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/database/: Makefile  cmake_install.cmake
(+8 files in other folders)
